Thu Mar 25 12:30:40 1999  Andreas Kupries  <a.kupries@westend.com>

	* ---------------- Ready to release 1.7 --------------------

Wed Mar 24 13:15:36 1999  Andreas Kupries  <a.kupries@westend.com>

	* win/pkgIndex.tcl: Separate package index, no way to use one DLL
	  for all versions of tcl. Stubs no help ?

	* unix/configure.in, unix/Makefile.in: Added all necessary code to
	  detect and use stubs appropriately.

	* unix/pkgIndex.tcl.in: Added code to check package dependency on
	  tcl version, which is dependent on the usage of stubs too.

Mon Mar 22 09:57:05 1999  Andreas Kupries  <a.kupries@westend.com>

	* memchan.c: Started to work on the changes required by 8.1 and
	  the new stub-mechanism.

	* configure.in (TCL_LIB/INCLUDE_DIR): Added 8.0.4 and 8.0.5 to the
	  list of paths to search.

Sun Dec 20 19:54:08 1998  Andreas Kupries  <a.kupries@westend.com>

	* memchan.c: Changed definition of panic to allow co-existence
	  with tcl8.0.4+. Got information about problems from a
	  beta-tester of the new plus-patches.

Wed Sep 30 15:43:42 1998  Andreas Kupries  <a.kupries@westend.com>

	* configure.in (TCL_LIB/INCLUDE_DIR): Added some additional
	  intelligence: Setting one of the variables, but not the other
	  causes automatic definition of the missing part with a value
	  derived from the defined directory. Suggested by Larry Virden.
	  Added 8.0.3 to the paths to search. Added $exec_prefix/lib to
	  the paths to search for the tcl-library.

Fri Jun 19 22:59:18 1998  Andreas Kupries  <a.kupries@westend.com>

	* configure.in: Fixed a bug noted by David Herron
	  <davidh@crl.com>. From its mail:

	> In the section that checks for the TCL library there
	> is a loop looking for different library extensions.
	> In my case it needs to match the ".so.*" case of
	> the loop, but it doesn't.
	> 
	> Changing the test to read as follows fixes the problem.
	> 
	>    if test -f $dir/libtcl$version$libsuff; then
	>        memchan_cv_lib_TCL_LIB="-L$dir -ltcl$version"