@@ -1,3 +1,7 @@
+Changes from 1.7
+
+*	Bugfixes for windows.
+
 Changes from 1.6
 
 *	Added 8.0.4 and 8.0.5 to the paths to search.
