@@ -3,7 +3,7 @@ extension memchan {
     author       {Andreas Kupries (a.kupries@westend.com)}
     maintenance  {Andreas Kupries (a.kupries@westend.com)}
 
-    version	   1.7
+    version	   1.8
     copying-policy {BSD-Style, see 'tcl'-license}
     date           {@mDate@}
 
