@@ -165,7 +165,8 @@ GENERICDIR	= $(ROOT)\generic
 # ... and the compiler flags
 
 MC_INCLUDES	= -I$(WINDIR) -I$(GENERICDIR) -I$(ROOT) -I$(TCL_INCLUDES)
-MC_DEFINES	= -nologo -D__WIN32__ -DHAVE_STDLIB_H $(BINIO) -DBUILD_memchan
+MC_DEFINES	= -nologo -D__WIN32__ -DHAVE_STDLIB_H $(BINIO) -DMEMCHAN_VERSION=\"@mFullVersion@\" -DBUILD_memchan -DDLL_BUILD
+
 
 
 MC_CFLAGS	=	$(cdebug) $(cflags) $(cvarsdll) $(include32) \
