@@ -1,3 +1,11 @@
+Mon Apr 12 17:27:08 1999  Andreas Kupries  <a.kupries@westend.com>
+
+	* generic/memchan.c: Fixed error in definition of EXPORT, as
+	  reported by <Petteri.Kettunen@picker.fi>.
+
+	* win/makefile.vc(5): Fixed some errors in the win makefiles, as
+	  reported by <Petteri.Kettunen@picker.fi>.
+
 Thu Mar 25 12:30:40 1999  Andreas Kupries  <a.kupries@westend.com>
 
 	* ---------------- Ready to release 1.7 --------------------
